--- a/angular/src/app/textpage/textpage.component.scss
+++ b/angular/src/app/textpage/textpage.component.scss
@@ -1,4 +1,4 @@
-//.text-page {
-//  width: calc(100% - 200px);
-//  padding-left: 25px;
-//}
+.text-page {
+  width: calc(100% - 200px);
+  padding-left: 25px;
+}
