--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -6,6 +6,6 @@
     </header>
     <main class="main flex-top">
         <app-sidebar></app-sidebar>
-        <div [innerHtml]="body"></div>
+        <router-outlet></router-outlet>
     </main>
 </div>
