--- a/angular/src/app/sidebar/sidebar.component.html
+++ b/angular/src/app/sidebar/sidebar.component.html
@@ -2,7 +2,8 @@
   <div class="sidebar-title">Навигация по урокам</div>
   <ul class="nav">
     <li class="item-0">
-      <a class="link-0" href="#">Get started</a>
+      <a class="link-0" routerLink="/lesson/1">Get started</a>
+      <a class="link-0" routerLink="/lesson/2">Get started2</a>
     </li>
   </ul>
 </div>
